--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 <body>
     <section class="principal container">
         <div class="container__caixa">
-            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço
-                único.</h1>
-            <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua" class="container__imagem">
+            <h1 class="container__titulo">O que é a Shein?</h1>
             <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
             <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
-            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+            <p class="container__aviso">A Shein é uma loja de comércio eletrônico que concentra sua atuação especialmente no segmento de moda feminina, apesar de também vender roupas masculinas, infantis, acessórios, entre outros artigos</p>
         </div>
     </section>
 
