--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <section class="principal container">
         <div class="container__caixa">
             <h1 class="container__titulo">O que é a Shein?</h1>
-            <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-            <a href="www.alura.com.br" class="container__botao botao_secundario">Assinar somente o Alura+</a>
-            <p class="container__aviso">A Shein é uma loja de comércio eletrônico que concentra sua atuação especialmente no segmento de moda feminina, apesar de também vender roupas masculinas, infantis, acessórios, entre outros artigos</p>
+            <p>A Shein é uma loja de comércio eletrônico que concentra sua atuação especialmente no segmento de moda feminina, apesar de também vender roupas masculinas, infantis, acessórios, entre outros artigos</p>
         </div>
     </section>
 
