--- a/index.html
+++ b/index.html
@@ -22,19 +22,28 @@
     <section class="container secundario">
         <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Assista do seu jeito</h2>
-            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros
-                aparelhos. Nossa seleção de cursos não para de crescer.</p>
+            <h2 class="descricao__titulo">Comprar na Shein é seguro?</h2>
+            <p class="descricao__texto">Definir se a Shein é confiável depende da avaliação pessoal de uma série de fatores,
+                 e levar em conta quais os parâmetros de segurança de cada usuário.</p>
         </div>
     </section>
 
     <section class="container secundario">
         <div class="container__descricao">
             <p class="descricao__texto">
-                Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da
-                tecnologia e aprender inglês ou espanhol, onde e como quiser.
+                Quais produtos são vendidos?
             </p>
-            <a href="www.alura.com.br" class="container__botao secundario__botao" container>Assine o Combo+</a>
+            <a href="www.alura.com.br" class="container__botao secundario__botao" container>A princípio, a Shein se popularizou por suas peças de vestuário feminino, especialmente voltadas para o público jovem. No entanto, a loja também vende:
+                roupas masculinas;
+                acessórios, como relógios e cintos;
+                roupas infantis;
+                sapatos;
+                roupa de banho;
+                lingerie;
+                peças de cama, mesa e banho;
+                itens para pets;
+                materiais de jardinagem;
+                ferramentas em geral.</a>
         </div>
         <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
@@ -43,9 +52,10 @@
         <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario__imagem">
         <div class="container__descricao">
-            <h2 class="descricao__titulo">Baixe seus cursos</h2>
-            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com
-                você, até mesmo sem internet.</p>
+            <h2 class="descricao__titulo">Por que a Shein é tão barata?</h2>
+            <p class="descricao__texto">
+                Algumas explicações sobre os motivos da Shein ser tão barata são as pop-up stores montadas em lugares estratégicos e, assim, custando menos.
+                 Além disso, a Shein investe bastante em rotatividade do estoque e grande volume de produção.</p>
         </div>
     </section>
 
