--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 
     <section class="container secundario">
         <div class="container__descricao">
-            <p class="descricao__texto">
-                Quais produtos são vendidos?
-            </p>
+            <h2 class="descricao__texto">Quais produtos são vendidos? </h2>
             <a href="www.alura.com.br" class="container__botao secundario__botao" container>A princípio, a Shein se popularizou por suas peças de vestuário feminino, especialmente voltadas para o público jovem. No entanto, a loja também vende:
                 roupas masculinas;
                 acessórios, como relógios e cintos;
