--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <section class="container secundario">
         <div class="container__descricao">
-            <h2 class="descricao__texto">Quais produtos são vendidos? </h2>
-            <a href="www.alura.com.br" class="container__botao secundario__botao" container>A princípio, a Shein se popularizou por suas peças de vestuário feminino, especialmente voltadas para o público jovem. No entanto, a loja também vende:
+            <h2 class="descricao__texto">Quais produtos são vendidos?</h2>
+            <p class="descricao__texto">A princípio, a Shein se popularizou por suas peças de vestuário feminino, especialmente voltadas para o público jovem. No entanto, a loja também vende:
                 roupas masculinas;
                 acessórios, como relógios e cintos;
                 roupas infantis;
