--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="container secundario">
         <div class="container__descricao">
             <h2 class="descricao__texto">Quais produtos são vendidos?</h2>
-            <p class="descricao__texto">A princípio, a Shein se popularizou por suas peças de vestuário feminino, especialmente voltadas para o público jovem. No entanto, a loja também vende:
+            <p class="descricao__texto"> <li> princípio, a Shein se popularizou por suas peças de vestuário feminino, especialmente voltadas para o público jovem. No entanto, a loja também vende:
                 roupas masculinas;
                 acessórios, como relógios e cintos;
                 roupas infantis;
@@ -41,7 +41,7 @@
                 peças de cama, mesa e banho;
                 itens para pets;
                 materiais de jardinagem;
-                ferramentas em geral.</a>
+                ferramentas em geral.</li> </a>
         </div>
         <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
