--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <div class="container__descricao">
             <h2 class="descricao__texto">Quais produtos são vendidos?</h2>
             <p class="descricao__texto"> <li> princípio, a Shein se popularizou por suas peças de vestuário feminino, especialmente voltadas para o público jovem. No entanto, a loja também vende:
-                roupas masculinas;
-                acessórios, como relógios e cintos;
-                roupas infantis;
-                sapatos;
-                roupa de banho;
-                lingerie;
-                peças de cama, mesa e banho;
-                itens para pets;
-                materiais de jardinagem;
-                ferramentas em geral.</li> </a>
+                <li>masculinas;</li>
+                <li>acessórios, como relógios e cintos;</li>
+                <li>roupas infantis;</li>
+                <li>sapatos;</li>
+                <li>roupa de banho;</li>
+                <li>lingerie;</li>
+                <li>peças de cama, mesa e banho;</li>
+                <li>itens para pets;</li>
+                <li>materiais de jardinagem;</li>
+                <li>erramentas em geral.</li>
         </div>
         <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
