--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <img class="image-28 1.png">
     <section class="principal container">
         <div class="container__caixa">
             <h1 class="container__titulo">O que é a Shein?</h1>
