--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container__caixa">
             <h1 class="container__titulo">O que é a Shein?</h1>
             <p>A Shein é uma loja de comércio eletrônico que concentra sua atuação especialmente no segmento de moda feminina, apesar de também vender roupas masculinas, infantis, acessórios, entre outros artigos</p>
-            <img src="image-28 1.png">
+            <img src="image-28 1.png"
         </div>
     </section>
 
