--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 
     <section class="container secundario">
-        <img src="img/Plataformas.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+        <img src="image 9.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Comprar na Shein é seguro?</h2>
             <p class="descricao__texto">Definir se a Shein é confiável depende da avaliação pessoal de uma série de fatores,
