--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <li>materiais de jardinagem;</li>
                 <li>erramentas em geral.</li>
         </div>
-        <img src="img/Telas.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+        <img src="image 10.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
     </section>
 
     <section class="container secundario">
-        <img src="img/Notebook.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
+        <img src="image 11.png" alt="Notebook com a página do curso HTML5 e CSS3 da Alura aberta"
             class="secundario__imagem">
         <div class="container__descricao">
             <h2 class="descricao__titulo">Por que a Shein é tão barata?</h2>
