--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         
         <ul class="dispositivos__lista">
             <li>
-                <img src="img/tv.png" alt="Ícone de televisão">
+                <img src="images 1.png" alt="Ícone de televisão">
                 <h3 class="lista__item">TV</h3>
             </li>
             <li>
-                <img src="img/computador.png" alt="Ícone de computador">
+                <img src="image 13.png" alt="Ícone de computador">
                 <h3 class="lista__item">Computador</h3>
             </li>
             <li>
